got rid of alert made custom one

--- a/css/style.css
+++ b/css/style.css
@@ -59,3 +59,25 @@ main {
 .miss{
     content: url(/img/explosion.png);
 }
+.custom-modal.hidden{
+    display: none;
+}
+.custom-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.modal-box {
+  background: rgba(255, 255, 255, 0.568);
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+}
